# engine

./: .dir-locals.el  .dockerignore  .gitignore  .prettierrc  Anchor.toml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  biome.json  bun.lockb  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.cjs  tsconfig.base.json  tsup.config.browser.ts  tsup.config.package.ts  turbo.json  vitest.config.ts  vocs.config.ts
core/program-build-tools/: Cargo.toml
core/program-build-tools/src/: lib.rs
core/programs/application/program/: Cargo.toml
core/programs/application/program/src/: lib.rs
core/programs/migration/program/: Cargo.toml
core/programs/migration/program/src/: errors.rs
core/protocol/protobufs/: Cargo.toml
core/protocol/protobufs/src/: application.proto  common.proto  lib.rs  task.proto  utils.rs
core/protocol/protobufs/src/effect/: application.rs  common.rs  mod.rs
core/protocol/worker-node/: Cargo.toml
core/protocol/worker-node/src/: lib.rs
core/storage/: Cargo.toml  package.json  tsconfig.json
core/storage/src/: applications.rs  jobs.rs  lib.rs  main.ts  receipts.rs  store.rs  tasks.rs
core/zkp/: Cargo.toml
core/zkp/examples/: measure_batch.rs
core/zkp/src/: circuits.rs  hash.rs  indexed_tree.rs  lib.rs  merkle.rs  poseidon.rs
environments/manager-node/: Cargo.toml
environments/manager-node/src/: lib.rs  manager.rs  sequencer.rs
environments/manager-node/src/orchestrator/: mod.rs
environments/manager-node/src/orchestrator/application/: messaging.rs  mod.rs
environments/manager-node/src/orchestrator/task/: assignment.rs  messaging.rs  mod.rs  storage_state.rs
environments/manager-node/tests/: integration.rs
modules/migration/program/: Cargo.toml
modules/migration/program/src/: lib.rs  macros.rs
modules/migration/program/src/instructions/: claim.rs  mod.rs
modules/payment/program/: Cargo.toml
modules/payment/program/src/: errors.rs  lib.rs  state.rs  utils.rs  verifying_key.rs
modules/payment/program/src/instructions/: claim_proofs.rs  create.rs  init.rs  mod.rs  redeem.rs
modules/reward/program/: Cargo.toml
modules/reward/program/src/: errors.rs  lib.rs  state.rs
modules/reward/program/src/instructions/: enter.rs  init.rs  init_intermediary_vault.rs  (+3 more)
rust-worker/: Cargo.toml  README.md  build.rs
rust-worker/proto/: messages.proto
rust-worker/src/: main.rs
solana/: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  SECURITY.MD  docker-compose.yml  package.json  run_tests.sh  tsconfig.json  vitest.config.ts
solana/cli/: index.ts  utils.ts
solana/cli/migration/: check-tx.ts  claims-demo.csv  claims.csv  confirm.ts  create-distribution.ts  create.ts  destroy.ts  distribute.ts  distribution-1735906597.json  distribution-1735928032.json  distribution-1735939349.json  distribution-1735979789.json  fetch.ts  index.ts  recreate.ts
solana/cli/payments/: create.ts  index.ts
solana/cli/rewards/: index.ts  init.ts  topup.ts
solana/cli/stats/: fetch.ts  index.ts
solana/cli/vesting/: claim.ts  close.ts  create.ts  index.ts
solana/common/: Cargo.toml
solana/common/src/: constants.rs  errors.rs  id.rs  lib.rs  macros.rs  pda.rs  state.rs
solana/constants/: idl.ts  staking-idl.ts
solana/idls/: effect_migration.json  effect_payment.json  effect_rewards.json  effect_staking.json
solana/migrations/: deploy.js  deploy.ts
solana/programs/effect-migration/: Cargo.toml
solana/programs/effect-migration/common/: Cargo.toml
solana/programs/effect-migration/program/: Cargo.toml
solana/programs/effect-migration/src/: errors.rs  lib.rs  macros.rs  state.rs  utils.rs
solana/programs/effect-payment/: Cargo.toml
solana/programs/effect-payment/common/: Cargo.toml
solana/programs/effect-payment/program/: Cargo.toml
solana/programs/effect-payment/src/: errors.rs  lib.rs  security.rs  state.rs  verifying_key.rs
solana/programs/effect-rewards/: Cargo.toml
solana/programs/effect-rewards/common/: Cargo.toml
solana/programs/effect-rewards/program/: Cargo.toml
solana/programs/effect-rewards/src/: errors.rs  lib.rs  macros.rs  security.rs  state.rs
solana/programs/effect-staking/: Cargo.toml
solana/programs/effect-staking/common/: Cargo.toml
solana/programs/effect-staking/program/: Cargo.toml
solana/programs/effect-staking/src/: constants.rs  errors.rs  lib.rs  macros.rs  state.rs
solana/programs/effect-vesting/: Cargo.toml
solana/programs/effect-vesting/common/: Cargo.toml
solana/programs/effect-vesting/program/: Cargo.toml
solana/programs/effect-vesting/src/: errors.rs  lib.rs  macros.rs  state.rs  types.rs
solana/programs/solana-snapshot-migration/: Cargo.toml
solana/programs/solana-snapshot-migration/src/: errors.rs  lib.rs  state.rs  utils.rs
solana/scripts/: deploy-local.ts  deploy.sh  deploy.ts  export-IDL.ts  export-idl.ts  generate-client.ts  generate-ts-idl.ts  get-staking-address.ts  seed-local.ts
solana/tests/: contstants.ts  helpers.ts  setup.ts  solana-snapshot-migration.ts  tests.ts  utils.ts
solana/tests/data/: users.json
solana/tests/keys/: authGiAp86YEPGjqpKNxAMHxqcgvjmBfQkqqvhf7yMV.json  devEs8EACCACJqJxJb2jBTRVsmrtsPobvJvMpD33mht.json  mint2SFE86T1WHSL7WhSRXzaeMMaUhRjhVvZWYNh918.json  mint44RzfitV8sqFGrLnh6sLNAS2jxaw1KhaSsYGT3P.json  mintTrhsrzTrrZo2kMJ7FKcJ9HCdRN8nadzKJFi9f4r.json  mintVBpStVcXHgTmMh5ga1L3YKsqtaRyZ4eE5Lgjc8x.json
solana/tests/suites/: 1-initialization-tests.ts  2-staking-tests.ts  3-solana-snapshot-migration.ts  bankrun.spec.ts  migration.spec.ts  payment.spec.ts  rewards.spec.ts  snapshot.spec.ts  snapshot.spec.ts.disable  staking.spec.ts  vesting.spec.ts
solana/tests/types/: effect.d.ts  mocha.d.ts
solana/utils/: anchor.ts  derive.ts  eos.ts  idl.ts  keys.ts  migration.ts  provider.ts  spl.ts  stake.ts  vesting.ts
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: failure_scenarios.rs  migration_flow.rs  payment_proofs.rs  persistence_restart.rs  staking_flow.rs  task_flow.rs
tools/crates/anchor-id-injector/: Cargo.toml
tools/crates/anchor-id-injector/src/: lib.rs
(+1402 files in other folders)
