[workspace]
members = [
  "packages/core/program",
  "packages/payment/program",
  "packages/migration/program",
  "packages/stake/program",
  "packages/rewards/program",
  "packages/vesting/program",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
