[workspace]
members = [
  "core/program",
  "modules/payment/program",
  "modules/migration/program",
  "modules/staking/program",
  "modules/reward/program",
  "modules/vesting/program",
  "modules/application/program",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
