[workspace]
members = [
  "core/programs/common",
  "core/programs/payment/program",
  "core/programs/migration/program",
  "core/programs/staking/program",
  "core/programs/reward/program",
  "core/programs/application/program",
  "core/programs/vesting/program",
"core/application",
  "core/codec",
  "core/proto",
  "core/storage",
  "core/workflow",
  "core/zkp",
  "environments/manager-node",
  "environments/worker-node",

]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
