[workspace]
members = [
    "common",
    
    "programs/effect-migration/common",
    "programs/effect-migration/program",

    "programs/effect-staking/common",
    "programs/effect-staking/program",

    "programs/effect-vesting/common",
    "programs/effect-vesting/program",

    "programs/effect-rewards/common",
    "programs/effect-rewards/program"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
