[workspace]
members = [
  "common",
  "programs/effect-payment",
  "programs/effect-migration",
  "programs/effect-staking",
  "programs/effect-vesting",
  "programs/effect-rewards",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
