[package]
name = "program-build-tools"
version = "0.1.0"
description = "Effect common program building tools."
edition = "2021"
homepage = "https://effect.ai/"
authors = ["effect"]
license = "MIT"
keywords = ["solana", "effect", "common", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "program_build_tools"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
mainnet = []
testing = []

[dependencies]
serde_json = "1"
bs58 = "0.5"

