[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
sled = "0.34"
ulid = "1.2.1"
proto = { path = "../proto" }
workflow = { path = "../workflow" }
serde_json = "1"
quick-protobuf = "0.8.0"
domain = { path = "../domain" }
