[package]
name = "zkp"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.4"
ark-ff = { version = "0.4", features = ["parallel"] }
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-std = { version = "0.4", features = ["parallel"] }
ark-crypto-primitives = { version = "0.4", default-features = false, features = ["sponge", "r1cs", "parallel"] }
ark-ec = { version = "0.4", features = ["parallel"] }
ark-groth16 = { version = "0.4", features = ["parallel"] }
ark-serialize = "0.4"
ark-poly = "0.4"
rayon = "1.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[features]
default = []

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
once_cell = "1.19"

