[package]
name = "proto"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
bincode = "1"
ulid = { version = "1", features = ["serde"] }  
time = { version = "0.3", features = ["serde"] }
quick-protobuf = "0.8.0"
quick-protobuf-codec = "0.3.1"
regex = "1"


[build-dependencies]
prost-build = "0.14"
