[package]
name = "worker-node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread","macros","time","signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
futures = "0.3"
serde_json = "1"
libp2p = { version = "0.56", default-features = true, features = [
  "macros","noise","ping","tcp","tokio","dns","yamux","request-response","quic"
] }
libp2p-request-response = "0.29"
codec = { path = "../codec" }
proto = { path = "../proto" }
