[package]
name = "effect-migration"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "effect_migration"

[features]
default=["localnet"]
cpi = ["no-entrypoint"]
localnet = []
mainnet = []
testing = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
libsecp256k1 = "0.7.1"
sha2 = "0.10.8"
effect-common = { path = "../../../core/program/" }
