[package]
name = "effect-payment"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "effect_payment"

[features]
default = ["mainnet"]
cpi = ["no-entrypoint"]
localnet = []
mainnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1" }
anchor-spl = "0.31.1"
effect-common = { path = "../../../core/program" }
groth16-solana = "0.1.0"
ark-bn254 = "0.5.0"
ark-serialize = "0.5.0"
hex = "0.4.3"
num-bigint = "0.4"
num-traits = "0.2"
