[package]
name = "effect-reward"
version = "0.1.0"
description = "Reflection rewards for Effect AI"
edition = "2021"
homepage = "https://effect.ai/"
authors = ["effect"]
license = "MIT"
keywords = ["solana", "effect", "ai", "rewards", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "effect_reward"

[features]
default = ["mainnet"]
mainnet = []
localnet = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
effect-common = { path = "../../../core/program" }
anchor-id-injector = { path = "../../../tools/crates/anchor-id-injector" } 
