[package]
name = "effect-migration"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "effect_migration"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
effect-staking = { path = "../effect-staking", features = ["cpi"]}
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
tiny-keccak = { version = "2.0", features = ["sha3", "keccak"] }
libsecp256k1 = "0.7.1"
sha2 = "0.10.8" 
bs58 = "0.4.0"