[package]
name = "effect-rewards"
version = "0.1.0"
description = "Reflection rewards for Effect AI"
edition = "2021"
homepage = "https://effect.ai/"
authors = ["effect"]
license = "MIT"
keywords = ["solana", "effect", "ai", "rewards", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "effect_rewards"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
effect-common = { path = "../../common" }
effect-staking = { path = "../effect-staking", features = ["cpi"] }
effect-vesting = { path = "../effect-vesting", features = ["cpi"] }
