[package]
name = "anchor-id-injector"
version = "0.1.0"
description = "Injects the program id into the program at build time"
edition = "2021"
homepage = "https://effect.ai/"
authors = ["effect"]
license = "MIT"
keywords = ["solana", "effect", "common", "anchor"]

[lib]
proc-macro = true

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
mainnet = []
testing = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
serde_json = "1"
bs58 = "0.5"

