[package]
name = "effect-migration"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "effect_migration"

[features]
cpi = ["no-entrypoint"]
testing = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
libsecp256k1 = "0.7.1"
sha2 = "0.10.8"
effect-common = { path = "../../../common" }
effect-migration-common = { path = "../common" }
effect-staking = { path = "../../effect-staking/program", features = ["cpi"] }
effect-staking-common = { path = "../../effect-staking/common" }

