[package]
name = "effect-payment"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "effect_payment"

[features]
cpi = ["no-entrypoint"]
testing = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
sha2 = "0.10.8" 
effect-common = { path = "../../../common" }
effect-payment-common = { path = "../common" }
solana-program = "1.18.26"
groth16-solana = "0.0.3"
ark-bn254 = "0.5.0"
ark-serialize = "0.5.0"
curve25519-dalek = "3.2.1"
ed25519-dalek = "=1.0.1"

