[package]
name = "effect-rewards"
version = "0.1.0"
description = "Reflection rewards for Effect AI"
edition = "2021"
homepage = "https://effect.ai/"
authors = ["effect"]
license = "MIT"
keywords = ["solana", "effect", "ai", "rewards", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "effect_rewards"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
mainnet = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
effect-common = { path = "../../../common" }
effect-rewards-common = { path = "../common" }
effect-staking = { path = "../../effect-staking/program", features = ["cpi"] }
effect-staking-common = { path = "../../effect-staking/common"}
effect-vesting = { path = "../../effect-vesting/program", features = ["cpi"] }
effect-vesting-common = { path = "../../effect-vesting/common"}
