[package]
name = "effect-vesting"
version = "0.1.0"
description = "Effect Vesting."
edition = "2021"
homepage = "https://effect.ai/"
authors = ["effectai"]
license = "MIT"
keywords = ["solana", "effectai", "vesting", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "effect_vesting"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
effect-common = { path = "../../../common" }
effect-vesting-common = { path = "../common" }
